--- a/leaflet.html
+++ b/leaflet.html
@@ -419,7 +419,9 @@
   // Dark map elegan (Carto Dark Matter)
   const darkmaps = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png');
 
-  const map = L.map('map',{scrollWheelZoom:false,gestureHandling:true,layers:[grayscale],zoomControl:false}).setView([-2.5, 117], 5);
+  //const map = L.map('map',{scrollWheelZoom:false,gestureHandling:true,layers:[grayscale],zoomControl:false}).setView([-2.5, 117], 5);
+
+  const map = L.map('map',{scrollWheelZoom:false,gestureHandling:true,layers:[grayscale],zoomControl:false, attributionControl:false}).setView([-2.5, 117], 5);
 
   // Ctrl+scroll zoom
   map.getContainer().addEventListener('wheel', e => { if(e.ctrlKey){map.scrollWheelZoom.enable()} else {map.scrollWheelZoom.disable()} });
@@ -455,6 +457,11 @@
     }
   });
   
+  function restartAnimation(el, className) {
+    el.classList.remove(className);           // hapus dulu class aktif
+    void el.offsetWidth;                      // trigger reflow (reset animasi)
+    el.classList.add(className);              // tambahkan kembali class agar animasi berjalan ulang
+  }
 
   // Switch control
   const switchControl = L.Control.extend({
